Changed Nav, Fixed overflow, removed image in smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700");
+@import url('https://fonts.googleapis.com/css2?family=Kufam:wght@400;600&family=Montserrat:wght@300;400;500&display=swap');
 
 :root{
 	--cRed :rgba(241, 21, 58, 0.678);
 }
 body{
 	scroll-behavior: smooth;
-	font-family: 'Lato', sans-serif;
+	font-family: 'Kufam', sans-serif;
 	overflow-x: hidden;
 }
 
@@ -29,6 +30,7 @@ nav{
 }
 nav.scrolled{
 	background-color: rgba(0,0,0,0.6);
+	transition-duration: 0.6s;
 }
 
 /*   Carousel    */
@@ -42,11 +44,11 @@ nav.scrolled{
        font-size: 2em;
 	}
 	nav ul.navbar-nav{
-	   background: rgba(255,230,153,0.6);
+	   background: rgba(255,230,153,0.7);
 	   border-radius: 1.1em;
 	}
 	nav.navbar>.navbar-brand>img{
-		width: 150px;
+		width: 80px;
 		height: auto;
 	}
 	.footer{
@@ -66,6 +68,7 @@ nav.scrolled{
 ---------------------------*/
 
 .eventCard{
+	font-family: 'Montserrat';
 	display: flex;
 	border-radius: 1px;
 	 box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
@@ -81,6 +84,11 @@ nav.scrolled{
 	background-image: url(../imgs/C1.png) ;
 	background-size: cover;
 	position: relative;
+}
+@media only screen and (min-width: 300px) and (max-width: 450px){
+	div.eventImg{
+		display: none;
+	}
 }
 /* .eventImg>.date{
 	position: absolute;
@@ -157,6 +165,7 @@ nav.scrolled{
 /* form */
 
 .regform >*{
+	font-family: 'Montserrat';
 	display: block;
 	margin: 15px auto;
 	padding: 15px 25px;
@@ -219,8 +228,6 @@ Footer
 	width:45px;
 }
 .final-footer{
-	background-color: #707066;
-	color: white;
 	text-align: center;
 	padding: 15px;
 	font-size: 16px;
